# ObjectService_ws

build_isolated/: catkin_make_isolated.cache
build_isolated/client_demo1/: CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake
build_isolated/client_demo1/atomic_configure/: .rosinstall  local_setup.sh
build_isolated/client_demo1/catkin_generated/: generate_cached_setup.py  package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  setup_cached.sh
build_isolated/client_demo1/catkin_generated/installspace/: .rosinstall  _setup_util.py  client_demo1.pc  client_demo1Config.cmake  local_setup.sh  setup.sh
build_isolated/client_demo1/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_isolated/client_demo1/gtest/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build_isolated/client_demo1/gtest/googletest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
devel/: .catkin  .rosinstall  local_setup.sh
devel/include/object_service/: Demo.h  DemoRequest.h  DemoResponse.h
devel/lib/client_demo1/: client_demo1
devel/lib/pkgconfig/: client_demo1.pc  object_service.pc
devel_isolated/client_demo1/: .catkin  setup.sh
src/client_demo1/: CMakeLists.txt
src/client_demo1/src/: client1.cpp
src/client_demo2/: CMakeLists.txt  package.xml
src/object_service/: CMakeLists.txt
src/object_service/include/object_service/: ObjManager.hpp  defs.h  value.hpp
src/object_service/src/: server.cpp
src/object_service/srv/: Demo.srv  Test.srv
(+18 files in other folders)
